Craeting VanillaJS Todo List

--- a/public/index 2.html
+++ b/public/index 2.html
@@ -14,11 +14,8 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-    <h1>ToDo List</h1>
-    <form id="jsForm">
-      <input type="text" placeholder="Write to do" id="jsInput" />
-      <button id="jsButton">Add</button>
-    </form>
-    <ul id="jsUl"></ul>
+    <button id="add">Add</button>
+    <span></span>
+    <button id="minus">minus</button>
   </body>
 </html>
